--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             border-radius: 8px;
             cursor: pointer;
             flex-basis: 100px;
-            boder-color:white;
+            boder-color:black;
         }
 
         .btn:hover {
